# dice

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  example-roll.sh  example_roll.sh
src/: lib.rs  main.rs  wasm_api.rs
src/character/: character.rs  dwarfs.rs  experience.rs  hero_stats.rs  mod.rs
src/dice/: error.rs  mod.rs  parser.rs  rolls.rs
src/error/: error.rs
src/itinerary/: mod.rs  useful_items.rs  war_gear.rs
src/skills/: skills.rs
src/text_app/: mod.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: animation.ts  dice.ts  dice3d.ts  main.ts  router.ts  sets.ts  store.ts  styles.css  util.ts
web/src/views/: menu.ts  roller.ts  setEditor.ts  setList.ts
