[package]
name = "dice"
version = "0.1.0"
edition = "2021"

[lib]
# rlib for the native binary + tests; cdylib for the wasm build.
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.1"
regex = "1.12.2"
# Native-only: the terminal REPL. Optional so the wasm build can drop it.
crossterm = { version = "0.29.0", optional = true }
# wasm-only: the browser boundary. All optional, enabled by the `wasm` feature.
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
getrandom = { version = "0.3", optional = true }

[features]
default = ["cli"]
# The native terminal REPL (main.rs + text_app).
cli = ["dep:crossterm"]
# The browser/WebAssembly API surface (wasm_api).
wasm = [
    "dep:wasm-bindgen",
    "dep:serde",
    "dep:serde_json",
    "dep:getrandom",
    "getrandom/wasm_js",
]
